# pulsera-ugahacks

./: .gitignore  CAIO.md  README.md  package-lock.json
apps/data_serve/: relay.py
apps/mobile/: app.json  global.css  metro.config.js  package-lock.json  package.json  tailwind.config.js
apps/relay/: relay.py
apps/server/: pyproject.toml
apps/server/checkpoints/: norm_mean.npy  norm_std.npy  pulsenet_best.pt  pulsenet_final.pt  training_history.json
apps/server/src/server/: config.py  db.py  main.py
apps/server/src/server/ml/pulsenet/: dataset.py  inference.py  model.py  train.py
apps/server/src/server/models/: __init__.py  alert.py  anomaly_event.py  device.py  episode.py  group.py  group_member.py  health_reading.py  health_snapshot.py  user.py  zone.py  zone_member.py
apps/server/src/server/routes/: alerts.py  auth.py  community.py  episodes.py  groups.py  health_data.py  pulsenet.py  zones.py
apps/server/src/server/services/: alert_service.py  anomaly_detection.py  community_engine.py  elevenlabs_service.py  episode_service.py  escalation_service.py  gemini_service.py  health.py
apps/server/src/server/websocket/: connection_manager.py  handler.py
apps/server/tests/: conftest.py  test_episode_routes.py  test_episode_service.py
apps/simulator/: requirements.txt  simulator.py
apps/watch/: project.yml
apps/web/: package-lock.json  package.json
docs/links/: caio.md
docs/plans/: plan1.md
docs/ref-code/: analysis-overlay.tsx  index.ts  map-transition.tsx  terrain-analysis-scene.tsx
web/: package-lock.json  package.json
(+133 files in other folders)
