[project]
name = "pulsera-server"
version = "0.1.0"
description = "Pulsera — Community Safety Pulse Network Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]
